<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.amazingnumbers</groupId>
    <artifactId>amazingnumbers</artifactId>
    <version>1</version>
    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
    </properties>
    <packaging>pom</packaging>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>2.7.2</version>
        </dependency>
    </dependencies>
</project>